@@ -9,6 +9,9 @@ Release ...
   of a paragraph in ".ad p" mode.
 * [nt]roff: The ".hypp" request has been introduced to control penalties
   of hyphenation points in ".ad p" mode.
+* [nt]roff: The ".padj" request has been added; it enables ".ad p" mode
+  globally in all environments. It is most useful to enable paragraph-at-
+  once adjustment in existing documents.
 * troff: Fixed a typo in the hyphenation code that could result in the
   insertion of a large negative vertical motion in a word containing a
   character above Unicode point U+0800.
